--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "express-intro-calc",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.0.0-beta.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lidan-Huang/express-intro-calc.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Lidan-Huang/express-intro-calc/issues"
+  },
+  "homepage": "https://github.com/Lidan-Huang/express-intro-calc#readme",
+  "description": ""
 }
